syntax = "proto3";
package sspb;

/*
名词释义
MS:管理服务器
GS:游戏服务器
VS:版本管理&&公告管理服务器
*/

//服务器在线情况
message GS2MSServerInfoMsg {
	int32 SID = 1;
	int32 Name = 2;
	int32 OnlineNum = 3;
}

//后台交互数据标记枚举
enum WebNsqTag{
	Nune = 0;
	AddRes = 1; 	//增加资源(银两/元宝...)
	AddItem = 2;	//增加道具
	SendMail = 4;	//发送邮件
	AddNotice = 5;	//增加公告
	RemoveNotice = 6;//移除公告
	LockPlayer = 7;	//封号
}


//给玩家添加金钱
message MS2GSAddPlayerMoneyMsg {
	string Token = 1;	//标识
	int32 PlayerID = 2;
	int32 Currency = 3;//货币类型
	int32 Value = 4;//货币值
}

//给玩家添加金钱回馈
message GS2MSAddPlayerMoneyRetMsg {
	string Token = 1;	//标识
	int32 PlayerID = 2;
	int32 Currency = 3;//货币类型
	int32 Value = 4;//货币值
	int32 ErrorCode = 5;
}

//给玩家添加物品
message MS2GSAddItemMsg {
	string Token = 1;	//标识
	int32 PlayerID = 2;
	int32 ItemCategory = 3; //1:物品;2:装备
	int32 ItemTypeID = 4;
	int32 Count = 5;
}

//给玩家添加物品回馈
message GS2MSAddItemRetMsg {
	string Token = 1;	//标识
	int32 PlayerID = 2;
	int32 ItemCategory = 3; //1:物品;2:装备
	int32 ItemTypeID = 4;
	int32 Count = 5;
	int32 ErrorCode = 6;
}

//发送邮件
message MS2CSendMailMsg {
	string Token = 1;	//标识
	message ItemInfo {
		int32 ItemTypeID = 1;
		int32 Count = 2;
		int32 ItemCategory = 3;//1:物品;2:装备
	}
	int32 PlayerID = 2;//给所有人发则不填该值
	string Topic = 3;
	string Content = 4;
	int32 Diamond = 5;
	int32 Silver = 6;
	repeated ItemInfo ItemList = 7;
	int32 ID = 8;//管理服务器中的ID
	int32 SID = 9;//服务器ID,指定服务器
	bool IsSendAll= 10; //是否给所有人发
}

//发送邮件回馈
message MS2GSSendMailRetMsg {
	string Token = 1;	//标识
	int32 ErrorCode = 2;
}

//增加公告
message MS2VSAddNoticeMsg {
	string Token = 1;	//标识
	string Title = 2;
	string Content = 3;
	int64 StartTime = 4;
	int64 EndTime = 5;
	int32 SID = 6; //指定服务器ID
}

//增加公告回馈
message VS2MSAddNoticeRetMsg {
	string Token = 1;	//标识
	int32 ErrorCode = 2;
}

//删除公告
message MS2VSRemoveNoticeMsg {
	string Token = 1;	//标识
	int32 ID = 2;
}

//删除公告回馈
message VS2MSRemoveNoticeRetMsg {
	string Token = 1;	//标识
	int32 ID = 2;
	int32 ErrorCode = 3;
}

//封号
message MS2GSBlockPlayerMsg {
	string Token = 1;	//标识
	int32 PlayerID = 2;
}

//解除封号
message MS2GSUnBlockPlayerMsg {
	string Token = 1;	//标识
	int32 PlayerID = 2;
}


